# LastResort

./: .gitignore  MANUAL_TESTING_AUDIT_AND_PLAN.md  Taskfile.yml  buf.gen.yaml  dev.ps1  go.mod  go.sum  results.json  results_nikto.json  results_whatweb.json  run-lastresort.bat  smoke_test.ps1  test_sslyze.json
.kilo/plans/: 1780509344042-brave-harbor.md
ai/: README.md  pyproject.toml
ai/src/: server.py
ai/src/llm/: provider.py
ai/src/prompts/: browser.py  report.py
ai/src/proto/ai/v1/: ai_pb2.py  ai_pb2.pyi  ai_pb2_grpc.py
browser/: package-lock.json  package.json
browser/src/: capture.ts  crawler.ts  dom.ts  screenshot.ts  server.ts  sessions.ts
cmd/lastresort/: main.go
docs/: 00-PROJECT-INDEX.md  01-PRD.md  02-EXISTING-TOOL-ANALYSIS.md  03-TECHNOLOGY-STACK.md  04-SYSTEM-ARCHITECTURE.md  05-ARCHITECTURE-REVIEW.md  06-DEPENDENCY-ANALYSIS.md  07-REFACTOR-PLAN.md  08-MIGRATION-PLAN.md  09-IN-DEPTH-AUDIT-IMPLEMENTATION-PLAN.md  IN_DEPTH_AUDIT_PROMPT.md  LASTRESORT_ALIGNMENT_AUDIT_FINAL.md  personal-website-test-checklist.md
internal/ai/: client.go
internal/api/: rest_routes.go  server.go
internal/attack/: context.go  csrf.go  csrf_test.go  engine.go  journal.go  manual_tools.go  manual_tools_test.go  module.go  parsers_test.go  path_traversal.go  ratelimit.go  result.go  sql_agent.go  sql_agent_test.go  tools.go  xss.go
internal/browser/: client.go
internal/crawler/: crawler.go  crawler_test.go  http_crawler.go  js_analyzer.go  sitemap.go
tests/: scan_integration_test.go
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+109 files in other folders)
