[project]
name = "lastresort-ai"
version = "0.1.0"
description = "AI orchestration service for LastResort security platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "protobuf>=5.26.1",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "google-genai>=2.7.0",
]

[tool.uv]
dev-dependencies = []
